[gd_scene load_steps=5 format=3 uid="uid://mdedmgt7skv7"]

[ext_resource type="Script" path="res://Scripts/PlaySound.gd" id="1_v0erq"]
[ext_resource type="AudioStream" uid="uid://c8g1viaq42b2k" path="res://Audio/elevator.wav" id="2_3m3x8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qd7k6"]

[sub_resource type="CanvasTexture" id="CanvasTexture_j8rb5"]

[node name="Area2D" type="Area2D"]
scale = Vector2(0.944, 0.95)
script = ExtResource("1_v0erq")
sound = ExtResource("2_3m3x8")
volume = 1.0
metadata/_edit_pinned_properties_ = [&"sound", &"volume"]

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2(16.9322, 8.83158)
shape = SubResource("RectangleShape2D_qd7k6")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.501961)
offset_left = -168.432
offset_top = -88.4211
offset_right = -128.432
offset_bottom = -48.4211
scale = Vector2(8.41525, 4.41053)
texture = SubResource("CanvasTexture_j8rb5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
